TODO.txt
Processing the following file:
 /dados/fazzt/GOES-R-Level-2-Products/ADPF/OR_ABI-L2-ADPF-M6_G16_s20243341230206_e20243341239514_c20243341244570-134508_0.nc_SEC
Script used:
 /usr/bin/python3 /dados/showcast/process_g16_adpf_sec.py
Command used:
 /usr/bin/python3 /dados/showcast/process_g16_adpf_sec.py "/dados/fazzt/GOES-R-Level-2-Products/ADPF/OR_ABI-L2-ADPF-M6_G16_s20243341230206_e20243341239514_c20243341244570-134508_0.nc_SEC" -63.0 -35.0 -35.0 -10.0 2 /dados/showcast/Output/ /dados/HTML/Output/ 00,10,20,30,40,50
Script started.
HDF5:"/dados/fazzt/GOES-R-Level-2-Products/ADPF/OR_ABI-L2-ADPF-M6_G16_s20243341230206_e20243341239514_c20243341244570-134508_0.nc"://Smoke
Remapping...
Remap finished! Time: 0.3 seconds
HDF5:"/dados/fazzt/GOES-R-Level-2-Products/ADPF/OR_ABI-L2-ADPF-M6_G16_s20243341230206_e20243341239514_c20243341244570-134508_0.nc"://Dust
Remapping...
Remap finished! Time: 0.24 seconds
HDF5:"/dados/fazzt/GOES-R-Level-2-Products/ADPF/OR_ABI-L2-ADPF-M6_G16_s20243341230206_e20243341239514_c20243341244570-134508_0.nc"://DQF
Remapping...
Remap finished! Time: 0.24 seconds
Traceback (most recent call last):
  File "/dados/showcast/process_g16_adpf_sec.py", line 267, in <module>
    ax.background_patch.set_fill(False)
    ^^^^^^^^^^^^^^^^^^^
AttributeError: 'GeoAxes' object has no attribute 'background_patch'. Did you mean: 'background_img'?

===================================================================================================
Processing the following file:
 /dados/fazzt/GOES-R-Level-2-Products/CPSF/OR_ABI-L2-CPSF-M6_G16_s20243341240206_e20243341249514_c20243341254332-134515_0.nc
Script used:
 /usr/bin/python3 /dados/showcast/process_g16_baseline_fdk.py
Command used:
 /usr/bin/python3 /dados/showcast/process_g16_baseline_fdk.py "/dados/fazzt/GOES-R-Level-2-Products/CPSF/OR_ABI-L2-CPSF-M6_G16_s20243341240206_e20243341249514_c20243341254332-134515_0.nc" -63.0 -35.0 -35.0 -10.0 8 /dados/showcast/Output/ /dados/HTML/Output/ 00,10,20,30,40,50
Script started.
Traceback (most recent call last):
  File "/dados/showcast/process_g16_baseline_fdk.py", line 249, in <module>
    "vmin": vmin, "vmax": vmax, "cmap": cmap,
            ^^^^
NameError: name 'vmin' is not defined. Did you mean: 'min'?
===============================
Processing the following file:
 /dados/fazzt/GOES-R-Level-2-Products/DSIF/OR_ABI-L2-DSIF-M6_G16_s20243341330206_e20243341339514_c20243341341179-134526_0.nc
Script used:
 /usr/bin/python3 /dados/showcast/process_g16_dsif_fdk.py
Command used:
 /usr/bin/python3 /dados/showcast/process_g16_dsif_fdk.py "/dados/fazzt/GOES-R-Level-2-Products/DSIF/OR_ABI-L2-DSIF-M6_G16_s20243341330206_e20243341339514_c20243341341179-134526_0.nc" -63.0 -35.0 -35.0 -10.0 10 /dados/showcast/Output/ /dados/HTML/Output/ 00,10,20,30,40,50
  File "/dados/showcast/process_g16_dsif_fdk.py", line 220
    plt.savefig(out_dir + plot_config["file_name_id_1"] + "_" + plot_config["file_name_id_2"] + "_" + date_file + '.png', facecolor='black'
               ^
SyntaxError: '(' was never closed
===================================================================================================
process_gfs_psgwrh_sec.py:
Processing the following file:
 /dados/fazzt/MARN-El Salvador/gfs.sam.t12z.f120_006_c20241212144724
Script used:
 /usr/bin/python3 /dados/showcast/process_gfs_psgwrh_sec.py
Command used:
 /usr/bin/python3 /dados/showcast/process_gfs_psgwrh_sec.py "/dados/fazzt/MARN-El Salvador/gfs.sam.t12z.f120_006_c20241212144724" -88.0 -60.0 -30.0 8.0 4 /dados/showcast/Output/ /dados/HTML/Output/ 
Traceback (most recent call last):
  File "/dados/showcast/process_gfs_psgwrh_sec.py", line 29, in <module>
    import pygrib                                                # Provides a high-level interface to the ECWMF ECCODES C library for reading GRIB files
    ^^^^^^^^^^^^^
ModuleNotFoundError: No module named 'pygrib'
===================================================================================================
Processing the following file:
 /dados/fazzt/INPE/INPE_MVF_202412131700.tar.gz
Script used:
 /usr/bin/python3 /dados/showcast/process_mul_fires.py
Command used:
 /usr/bin/python3 /dados/showcast/process_mul_fires.py "/dados/fazzt/INPE/INPE_MVF_202412131700.tar.gz" -54.0 -28.0 -43.0 -18.0 0 /dados/showcast/Output/ /dados/HTML/Output/ 
Traceback (most recent call last):
  File "/dados/showcast/process_mul_fires.py", line 40, in <module>
    import folium
ModuleNotFoundError: No module named 'folium'
===================================================================================================
Processing the following file:
 /dados/fazzt/JPSS/PRODUCTS/NUCAPS/NUCAPS-EDR_v3r2_j01_s202412131727229_e202412131727527_c202412131807010.nc
Script used:
 /usr/bin/python3 /dados/showcast/process_nucaps.py
Command used:
 /usr/bin/python3 /dados/showcast/process_nucaps.py "/dados/fazzt/JPSS/PRODUCTS/NUCAPS/NUCAPS-EDR_v3r2_j01_s202412131727229_e202412131727527_c202412131807010.nc" -54.0 -28.0 -43.0 -18.0 1 /dados/showcast/Output/ /dados/HTML/Output/ 
  File "/dados/showcast/process_nucaps.py", line 584
    from PIL.WebPImagePlugin import Image          
TabError: inconsistent use of tabs and spaces in indentation
===================================================================================================
Processing the following file:
 /dados/fazzt/JPSS/PRODUCTS/OC/VR1VCW_C2024347_C55_002025-002606_020249_020415_034349_052449_084813_102913_121139_135239_135403_153339-153629_171603-172852_185704-190952_203929-205052_222030-223152_VW00_edgemask_chlora.nc
Script used:
 /usr/bin/python3 /dados/showcast/process_jps_oceanc_sec.py
Command used:
 /usr/bin/python3 /dados/showcast/process_jps_oceanc_sec.py "/dados/fazzt/JPSS/PRODUCTS/OC/VR1VCW_C2024347_C55_002025-002606_020249_020415_034349_052449_084813_102913_121139_135239_135403_153339-153629_171603-172852_185704-190952_203929-205052_222030-223152_VW00_edgemask_chlora.nc" -120 -89.0 -60.0 -44.0 4 /dados/showcast/Output/ /dados/HTML/Output/ 
Script started.
Traceback (most recent call last):
  File "/dados/showcast/process_jps_oceanc_sec.py", line 185, in <module>
    img = ax.imshow(data, vmin=plot_config["vmin"], vmax=plot_config["vmax"], norm=norm, origin='upper', extent=img_extent, cmap=plot_config["cmap"], zorder=3)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/cartopy/mpl/geoaxes.py", line 306, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/cartopy/mpl/geoaxes.py", line 1290, in imshow
    result = super().imshow(img, *args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/matplotlib/__init__.py", line 1469, in inner
    return func(ax, *map(sanitize_sequence, args), **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3/dist-packages/matplotlib/axes/_axes.py", line 5764, in imshow
    im._scale_norm(norm, vmin, vmax)
  File "/usr/lib/python3/dist-packages/matplotlib/cm.py", line 434, in _scale_norm
    raise ValueError(
ValueError: Passing a Normalize instance simultaneously with vmin/vmax is not supported.  Please pass vmin/vmax directly to the norm when creating it.
===================================================================================================
procurar qual produto importa o pyhdf
O erro deve ter sido resolvido pela instalação do python3-hdf4.
===================================================================================================
===================================================================================================
===================================================================================================
===================================================================================================
===================================================================================================


